feat: replicante the circuit measure in diferente positions of the classical register

--- a/Grover for 2 qubits.ipynb
+++ b/Grover for 2 qubits.ipynb
@@ -84,24 +84,55 @@
    "outputs": [],
    "source": [
     "n = 2\n",
-    "qc = QuantumCircuit(n)\n",
+    "s_bits = ClassicalRegister(4, name='s_bits')\n",
+    "a_qubits = QuantumRegister(2, name='a')\n",
+    "\n",
+    "qc = QuantumCircuit(a_qubits)\n",
     "\n",
     "qc.cz(0,1)\n",
+    "qc.x(0)\n",
     "\n",
     "oracle_ex3 = qc.to_gate()\n",
+    "\n",
+    "\n",
+    "\n",
     "oracle_ex3.name = \"U$_\\omega$\"\n",
     "\n",
-    "grover_circuit = QuantumCircuit(n)\n",
-    "grover_circuit = initialize_s(grover_circuit, [0,1,2,3,4])\n",
-    "grover_circuit.append(oracle_ex3, [0,1,2,3,4])\n",
-    "grover_circuit.append(diffuser(n), [0,1,2,3,4])\n",
-    "grover_circuit.measure_all()\n",
+    "\n",
+    "grover_circuit = QuantumCircuit(a_qubits,s_bits)\n",
+    "grover_circuit = initialize_s(grover_circuit, [0,1])\n",
+    "grover_circuit.append(oracle_ex3, [0,1])\n",
+    "grover_circuit.append(diffuser(n), [0,1])\n",
+    "grover_circuit.measure([0,1],[0,1])\n",
+    "grover_circuit.barrier()\n",
+    "\n",
+    "a = next(iter(counts))\n",
+    "\n",
+    "qc1 = QuantumCircuit(a_qubits)\n",
+    "qc1.cz(0,1)\n",
+    "# the last state after the measure is the base state, not more |0>\n",
+    "if(str(a)[3]=='0'):\n",
+    "  qc1.x(0)\n",
+    "if(str(a)[2]=='0'):\n",
+    "  qc1.x(1)\n",
+    "\n",
+    "\n",
+    "oracle_ex4 = qc1.to_gate()\n",
+    "\n",
+    "grover_circuit = initialize_s(grover_circuit, [0,1])\n",
+    "grover_circuit.append(oracle_ex4, [0,1])\n",
+    "grover_circuit.append(diffuser(n), [0,1])\n",
+    "grover_circuit.measure([0,1],[2,3])\n",
+    "#measure the value in the classical\n",
+    "#measure in 2bits twice\n",
     "\n",
     "qasm_sim = Aer.get_backend('qasm_simulator')\n",
     "transpiled_grover_circuit = transpile(grover_circuit, qasm_sim)\n",
     "results = qasm_sim.run(transpiled_grover_circuit).result()\n",
     "counts = results.get_counts()\n",
-    "plot_histogram(counts)"
+    "#plot_histogram(counts)\n",
+    "print(counts)\n",
+    "#grover_circuit.draw()"
    ]
   },
   {
