--- a/Implementation_4_qubits_4_results_entangled.ipynb
+++ b/Implementation_4_qubits_4_results_entangled.ipynb
@@ -83,25 +83,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n = 2\n",
-    "qc = QuantumCircuit(n)\n",
+    "n = 4\n",
+    "qubits = QuantumRegister(n, name='a')\n",
     "\n",
+    "qc = QuantumCircuit(qubits)\n",
+    "\n",
+    "#Oracle\n",
     "qc.cz(0,1)\n",
     "\n",
-    "oracle_ex3 = qc.to_gate()\n",
-    "oracle_ex3.name = \"U$_\\omega$\"\n",
+    "oracle = qc.to_gate()\n",
+    "oracle.name = \"Oracle\"\n",
     "\n",
-    "grover_circuit = QuantumCircuit(n)\n",
-    "grover_circuit = initialize_s(grover_circuit, [0,1,2,3,4])\n",
-    "grover_circuit.append(oracle_ex3, [0,1,2,3,4])\n",
-    "grover_circuit.append(diffuser(n), [0,1,2,3,4])\n",
+    "grover_circuit = QuantumCircuit(qubits)\n",
+    "grover_circuit = initialize_s(grover_circuit, [0,1])\n",
+    "grover_circuit.append(oracle, [0,1,2,3])\n",
+    "grover_circuit.append(diffuser(2), [0,1])\n",
+    "grover_circuit.barrier()\n",
+    "\n",
+    "#?????\n",
+    "qc.h(2)\n",
+    "qc.cz(0,2)\n",
+    "qc.h(2)\n",
+    "\n",
+    "qc.h(3)\n",
+    "qc.cz(1,3)\n",
+    "qc.h(3)\n",
+    "#?????\n",
+    "\n",
+    "entangled = qc.to_gate()\n",
+    "entangled.name=\"Entangled\"\n",
+    "grover_circuit.append(entangled, [0,1,2,3])\n",
+    "\n",
     "grover_circuit.measure_all()\n",
+    "\n",
     "\n",
     "qasm_sim = Aer.get_backend('qasm_simulator')\n",
     "transpiled_grover_circuit = transpile(grover_circuit, qasm_sim)\n",
     "results = qasm_sim.run(transpiled_grover_circuit).result()\n",
     "counts = results.get_counts()\n",
-    "plot_histogram(counts)"
+    "plot_histogram(counts)\n",
+    "#print(counts)\n",
+    "#grover_circuit.draw()"
    ]
   },
   {
